@startuml class_system_io
title "Class Diagram System IO"

hide <<DataModel>> members
package DataModel {
    class TreeItem <<DataModel>>
    class ObjectFactory <<DataModel>>
    class ObjectRegistry <<DataModel>>
}

namespace gurps_system {

class Io {
+ Io(factory: ObjectFactory&, registry: ObjectRegistry&)
-- Serializer management --
+ install(serializer: shared_ptr<Serializer>): bool
+ uninstall(id: uuid): bool
+ installedSerializers(): uuid[]
-- Serializer lookup --
+ serializer(id: uuid): Serializer*
+ serializer(filter: QString): Serializer*
+ allFilters(): QStringList
-- IO --
+ read(stream: istream): vector<shared_ptr<TreeItem>>
+ write(stream: ostream, objects: vector<shared_ptr<TreeItem>>, filter: QString): void
+ write(stream: ostream, objects: vector<shared_ptr<TreeItem>>, id: uuid): void
}

gurps_system.Io o-- DataModel.ObjectFactory
gurps_system.Io o-- DataModel.ObjectRegistry

abstract class Serializer {
+ Serializer()
-- Identity --
+ {abstract} id(): uuid
-- Capabilities --
+ {abstract} filters(): QStringList
+ {abstract} provides(filter: QString): bool
-- Header --
+ {static} kHeaderSize: size_t = 23
+ {static} buildHeader(id: uuid, version: uint16_t): FileHeader
-- IO --
+ {abstract} read(header: FileHeader, version: uint16_t, stream: istream, factory: ObjectFactory, registry: ObjectRegistry): vector<shared_ptr<TreeItem>>
+ {abstract} write(stream: ostream, objects: vector<shared_ptr<TreeItem>>): void
.. note ..
FileHeader = array<byte, 23>
}

gurps_system.Io "1" *-- "*" gurps_system.Serializer

class JsonSerializer {
-- Identity --
+ {static} classId(): uuid
+ id(): uuid
-- Capabilities --
+ filters(): QStringList
+ provides(filter: QString): bool
-- IO --
+ read(header: FileHeader, version: uint16_t, stream: istream, factory: ObjectFactory, registry: ObjectRegistry): vector<shared_ptr<TreeItem>>
+ write(stream: ostream, objects: vector<shared_ptr<TreeItem>>): void
}
gurps_system.Serializer <|-- gurps_system.JsonSerializer

class XmlSerializer {
-- Identity --
+ {static} classId(): uuid
+ id(): uuid
-- Capabilities --
+ filters(): QStringList
+ provides(filter: QString): bool
-- IO --
+ read(header: FileHeader, version: uint16_t, stream: istream, factory: ObjectFactory, registry: ObjectRegistry): vector<shared_ptr<TreeItem>>
+ write(stream: ostream, objects: vector<shared_ptr<TreeItem>>): void
}
gurps_system.Serializer <|-- gurps_system.XmlSerializer

class LatexSerializer
gurps_system.Serializer <|-- gurps_system.LatexSerializer

}

@enduml